@@ -242,20 +242,23 @@ AlgoliaSearch.prototype = {
   /*
    * Add an existing user key
    *
-   * @param acls the list of ACL for this key. Defined by an array of strings that
-   * can contains the following values:
-   *   - search: allow to search (https and http)
-   *   - addObject: allows to add/update an object in the index (https only)
-   *   - deleteObject : allows to delete an existing object (https only)
-   *   - deleteIndex : allows to delete index content (https only)
-   *   - settings : allows to get index settings (https only)
-   *   - editSettings : allows to change index settings (https only)
-   * @param params.validity the number of seconds after which the key will be automatically removed (0 means no time limit for this key)
-   * @param params.maxQueriesPerIPPerHour Specify the maximum number of API calls allowed from an IP address per hour.
-   * @param params.maxHitsPerQuery Specify the maximum number of hits this API key can retrieve in one call.
-   * @param callback the result callback called with two arguments
-   *  error: null or Error('message')
-   *  content: the server answer with user keys list
+   * @param {string[]} acls - The list of ACL for this key. Defined by an array of strings that
+   *   can contains the following values:
+   *     - search: allow to search (https and http)
+   *     - addObject: allows to add/update an object in the index (https only)
+   *     - deleteObject : allows to delete an existing object (https only)
+   *     - deleteIndex : allows to delete index content (https only)
+   *     - settings : allows to get index settings (https only)
+   *     - editSettings : allows to change index settings (https only)
+   * @param {Object} [params] - Optionnal parameters to set for the key
+   * @param {number} params.validity - Number of seconds after which the key will be automatically removed (0 means no time limit for this key)
+   * @param {number} params.maxQueriesPerIPPerHour - Number of API calls allowed from an IP address per hour
+   * @param {number} params.maxHitsPerQuery - Number of hits this API key can retrieve in one call
+   * @param {string[]} params.indexes - Allowed targeted indexes for this key
+   * @param {Function} callback - The result callback called with two arguments
+   *   error: null or Error('message')
+   *   content: the server answer with user keys list
+   * @return {Promise|undefined} Returns a promise if no callback given
    */
   addUserKey: function(acls, params, callback) {
     if (arguments.length === 1 || typeof params === 'function') {
@@ -271,6 +274,7 @@ AlgoliaSearch.prototype = {
       postObj.validity = params.validity;
       postObj.maxQueriesPerIPPerHour = params.maxQueriesPerIPPerHour;
       postObj.maxHitsPerQuery = params.maxHitsPerQuery;
+      postObj.indexes = params.indexes;
     }
 
     return this._jsonRequest({
@@ -281,14 +285,60 @@ AlgoliaSearch.prototype = {
       callback: callback
     });
   },
-  /*
+  /**
    * Add an existing user key
-   *
    * @deprecated Please use client.addUserKey()
    */
   addUserKeyWithValidity: deprecate(function(acls, params, callback) {
     return this.addUserKey(acls, params, callback);
   }, deprecatedMessage('client.addUserKeyWithValidity()', 'client.addUserKey()')),
+
+  /**
+   * Update an existing user key
+   * @param {string} key - The key to update
+   * @param {string[]} acls - The list of ACL for this key. Defined by an array of strings that
+   *   can contains the following values:
+   *     - search: allow to search (https and http)
+   *     - addObject: allows to add/update an object in the index (https only)
+   *     - deleteObject : allows to delete an existing object (https only)
+   *     - deleteIndex : allows to delete index content (https only)
+   *     - settings : allows to get index settings (https only)
+   *     - editSettings : allows to change index settings (https only)
+   * @param {Object} [params] - Optionnal parameters to set for the key
+   * @param {number} params.validity - Number of seconds after which the key will be automatically removed (0 means no time limit for this key)
+   * @param {number} params.maxQueriesPerIPPerHour - Number of API calls allowed from an IP address per hour
+   * @param {number} params.maxHitsPerQuery - Number of hits this API key can retrieve in one call
+   * @param {string[]} params.indexes - Allowed targeted indexes for this key
+   * @param {Function} callback - The result callback called with two arguments
+   *   error: null or Error('message')
+   *   content: the server answer with user keys list
+   * @return {Promise|undefined} Returns a promise if no callback given
+   */
+  updateUserKey: function(key, acls, params, callback) {
+    if (arguments.length === 2 || typeof params === 'function') {
+      callback = params;
+      params = null;
+    }
+
+    var putObj = {
+      acl: acls
+    };
+
+    if (params) {
+      putObj.validity = params.validity;
+      putObj.maxQueriesPerIPPerHour = params.maxQueriesPerIPPerHour;
+      putObj.maxHitsPerQuery = params.maxHitsPerQuery;
+      putObj.indexes = params.indexes;
+    }
+
+    return this._jsonRequest({
+      method: 'PUT',
+      url: '/1/keys/' + key,
+      body: putObj,
+      hostType: 'write',
+      callback: callback
+    });
+  },
 
   /**
    * Set the extra security tagFilters header
@@ -1394,13 +1444,58 @@ AlgoliaSearch.prototype.Index.prototype = {
     });
   },
 
-  /*
+  /**
    * Add an existing user key associated to this index
    * @deprecated use index.addUserKey()
    */
    addUserKeyWithValidity: deprecate(function(acls, params, callback) {
      return this.addUserKey(acls, params, callback);
    }, deprecatedMessage('index.addUserKeyWithValidity()', 'index.addUserKey()')),
+
+   /**
+    * Update an existing user key associated to this index
+    * @param {string} key - The key to update
+    * @param {string[]} acls - The list of ACL for this key. Defined by an array of strings that
+    *   can contains the following values:
+    *     - search: allow to search (https and http)
+    *     - addObject: allows to add/update an object in the index (https only)
+    *     - deleteObject : allows to delete an existing object (https only)
+    *     - deleteIndex : allows to delete index content (https only)
+    *     - settings : allows to get index settings (https only)
+    *     - editSettings : allows to change index settings (https only)
+    * @param {Object} [params] - Optionnal parameters to set for the key
+    * @param {number} params.validity - Number of seconds after which the key will be automatically removed (0 means no time limit for this key)
+    * @param {number} params.maxQueriesPerIPPerHour - Number of API calls allowed from an IP address per hour
+    * @param {number} params.maxHitsPerQuery - Number of hits this API key can retrieve in one call
+    * @param {Function} callback - The result callback called with two arguments
+    *   error: null or Error('message')
+    *   content: the server answer with user keys list
+    * @return {Promise|undefined} Returns a promise if no callback given
+    */
+   updateUserKey: function(key, acls, params, callback) {
+     if (arguments.length === 2 || typeof params === 'function') {
+       callback = params;
+       params = null;
+     }
+
+     var putObj = {
+       acl: acls
+     };
+
+     if (params) {
+       putObj.validity = params.validity;
+       putObj.maxQueriesPerIPPerHour = params.maxQueriesPerIPPerHour;
+       putObj.maxHitsPerQuery = params.maxHitsPerQuery;
+     }
+
+     return this.as._jsonRequest({
+       method: 'PUT',
+       url: '/1/indexes/' + encodeURIComponent(this.indexName) + '/keys/' + key,
+       body: putObj,
+       hostType: 'write',
+       callback: callback
+     });
+   },
 
   _search: function(params, callback) {
     return this.as._jsonRequest({ cache: this.cache,
