@@ -28,6 +28,15 @@ UNREALEASED
       Removed the tld option as it's no more needed nor compatible with having a new HA implementation with different tlds (.com/.net)
     * DEPRECIATION: client.addUserKeyWithValidity(), index.addUserKeyWithValidity()
       You can now use client.addUserKey(acls, params, cb), index.addUserKey(acls, params, cb)
+    * FEATURE: client|index.updateUserKey(key, acls, params, callback)
+      Update a user key, provide acls and optional params
+    * BREAKING CHANGE (Node.js):
+      As we now have addUserKey and updateUserKey, we removed:
+       - client|index.addUserKeyWithValidityAndIndexes
+       - client|index.updateUserKeyWithValidity
+       - client|index.updateUserKeyWithValidityAndIndexes
+      You can use client|index.addUserKey or client|index.updateUserKey to do
+      deal with all you keys needs
 
 2015-10-04  3.0.7
     * MIGRATION: throw on V2 .search() usage:
